Trabalho finalizado seguindo as especificações

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReceitasAplicativo</string>
+    <string name="default_web_client_id">12549724046-ui4ahn00e8ioc7im8r3q14ptmjgio5f7.apps.googleusercontent.com</string>
 </resources>
